--- a/WebChoose/Web.config
+++ b/WebChoose/Web.config
@@ -17,6 +17,9 @@
     <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
+	<connectionStrings>
+		<add name="DataContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\WebChoose.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <system.web>
 		<customErrors mode="On">
 			<error statusCode="404" redirect="/Error/NotFound" />
