--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -49,7 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DataContext.cs" />
+    <Compile Include="Models\Alternative.cs" />
+    <Compile Include="Models\Criterion.cs" />
+    <Compile Include="Models\LPR.cs" />
+    <Compile Include="Models\Mark.cs" />
+    <Compile Include="Models\Result.cs" />
+    <Compile Include="Models\Vector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
