Extend DAL proj, create common crud operations controller

--- a/WebChoose/Views/web.config
+++ b/WebChoose/Views/web.config
@@ -15,7 +15,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="WebChoose" />
-        <add namespace="MvcSiteMapProvider.Web.Html" />
+	      <add namespace="WebChoose.Infrastructure" />
+				<add namespace="MvcSiteMapProvider.Web.Html" />
         <add namespace="MvcSiteMapProvider.Web.Html.Models" />
       </namespaces>
     </pages>
