--- a/WebChoose/Web.config
+++ b/WebChoose/Web.config
@@ -21,7 +21,7 @@
 		<add name="DataContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\WebChoose.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
-		<customErrors mode="On">
+		<customErrors mode="Off">
 			<error statusCode="404" redirect="/Error/NotFound" />
 			<error statusCode="401" redirect="/Error/Unathorised" />
 			<error statusCode="500" redirect="/Error/InternalError" />
