--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -50,13 +50,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContext.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Models\Alternative.cs" />
     <Compile Include="Models\Criterion.cs" />
+    <Compile Include="Models\CriterionType.cs" />
     <Compile Include="Models\LPR.cs" />
     <Compile Include="Models\Mark.cs" />
+    <Compile Include="Models\OptimType.cs" />
     <Compile Include="Models\Result.cs" />
     <Compile Include="Models\Vector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AlternativeRepository.cs" />
+    <Compile Include="Repositories\CriterionRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IAlternativeRepository.cs" />
+    <Compile Include="Repositories\Interfaces\ICriterionRepository.cs" />
+    <Compile Include="Repositories\Interfaces\ILprRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IMarkRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IResultRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IVectorRepository.cs" />
+    <Compile Include="Repositories\LprRepository.cs" />
+    <Compile Include="Repositories\MarkRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\ResultRepository.cs" />
+    <Compile Include="Repositories\VectorRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
