--- a/WebChoose/packages.config
+++ b/WebChoose/packages.config
@@ -10,8 +10,9 @@
   <package id="MvcSiteMapProvider.MVC5" version="4.6.22" targetFramework="net461" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.22" targetFramework="net461" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.3.0" targetFramework="net461" />
-  <package id="Unity.Container" version="5.7.0" targetFramework="net461" />
+  <package id="Unity.Container" version="5.8.6" targetFramework="net461" />
   <package id="Unity.Mvc" version="5.0.13" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
