--- a/WebChoose/WebChoose.csproj
+++ b/WebChoose/WebChoose.csproj
@@ -138,7 +138,9 @@
     <Content Include="Scripts\sweetalert.min.js" />
     <Content Include="Scripts\vendor.js" />
     <Content Include="Templates\BootstrapTableTemplate.html" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -151,6 +153,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LPRController.cs" />
     <Compile Include="Controllers\MarkController.cs" />
+    <Compile Include="Controllers\ResultController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -158,6 +161,7 @@
     <Compile Include="Infrastructure\ControllerHelper.cs" />
     <Compile Include="Infrastructure\HtmlHelperExtensions.cs" />
     <Compile Include="Infrastructure\TranslationHelper.cs" />
+    <Compile Include="Models\MarkNormalizationViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -193,6 +197,10 @@
     <Content Include="Views\Alternative\Manage.cshtml" />
     <Content Include="Views\Criterion\GetAlternativeCriterions.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\String.cshtml" />
+    <Content Include="Views\Result\Step1.cshtml" />
+    <Content Include="Views\Result\Step2.cshtml" />
+    <Content Include="Views\Result\Step3.cshtml" />
+    <Content Include="Views\Result\Step4.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -202,7 +210,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
