--- a/WebChoose/Web.config
+++ b/WebChoose/Web.config
@@ -18,7 +18,7 @@
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
 	<connectionStrings>
-		<add name="DataContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\WebChoose.mdf';Integrated Security=True;MultipleActiveResultSets = true;" providerName="System.Data.SqlClient" />
+		<add name="DataContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\WebChoose2.mdf';Integrated Security=True;MultipleActiveResultSets = true;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
 		<customErrors mode="Off">
